# ditoo

./: .gitignore  .pre-commit-config.yaml  config.toml.example  daemon.py  ditoo.service  pyproject.toml
src/: ditoo.py  logging.py
src/display/: gifs.py  packets.py
src/weather/: config.py  selector.py  weather.py
